@@ -699,5 +699,8 @@ x^2 - 82136*x - 12052, [3, [6, [Mod(0, 3)]], ["(tame) [I{12}-I{0}-1] page 17
 ? genus2red(0,27*x^5+97*x^4+118*x^3+60*x^2+13*x+1,3)
 [729, Mat([3, 6]), 27*x^5 + 367*x^4 + 1974*x^3 + 5256*x^2 + 6933*x + 3627, [
 3, [6, [Mod(0, 3)]], ["[IV-II{6}] page 175", [20]]]]
+? genus2red(x,-x^6-3*x^4-10*x^2-1,3)
+[729, Mat([3, 6]), -4*x^6 - 12*x^4 - 39*x^2 - 4, [3, [5, [Mod(0, 3), Mod(0, 
+3)]], ["[IV*-IV*-0] pages 160-175", [3, 3]]]]
 ? print("Total time spent: ",gettime);
-Total time spent: 72
+Total time spent: 60
