@@ -688,3 +688,6 @@ genus2red(Q,P,3)
 
 \\ #1596
 genus2red(0,27*x^5 + 97*x^4 + 118*x^3 + 60*x^2 + 13*x + 1,3)
+
+\\ #1597
+genus2red(x,-x^6 - 3*x^4 - 10*x^2 - 1,3)
