@@ -59,6 +59,7 @@ BA 35- multiif did not handle correctly return() in conditions [#1590]
    40- zm_zc_mul only worked for square zm matrices
    41- genus2red(0,27*x^5+97*x^4+118*x^3+60*x^2+13*x+1,3) -> bug msg [#1596]
    42- [ghelp] oo loop when $COLUMNS too small [#1594]
+   43- genus2red(x,-x^6-3*x^4-10*x^2-1,3) -> impossible inverse [#1597]
 
   Added
     1- add optional argument to sumdigits to specify the base
